--- a/index.html
+++ b/index.html
@@ -73,4 +73,10 @@ layout: default
 	    {% endif %}
 
 	</div>
+  <!-- Disqus -->
+  {% if site.theme.disqus_shortname %}
+  <div class="comments">
+    {% include disqus.html %}
+  </div>
+  {% endif %}
 </div>
