--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 ---
 layout: default
 ---
-
-
-
-
-
 <div class="home">
   <article class="home-feature-image" >
   <div style="background-image: url('{{ site.baseurl }}/{{ site.theme.place_holder_image }}')"/>
@@ -31,11 +26,11 @@ layout: default
 		    </p>
 		  </header>
 		  <div class="excerpt">
-		  {% assign num = post.content | number_of_words %}
+		  {% assign num = post.content | size %}
 		  {% if  num  < site.theme.visiblewords %}
 		    {{ post.content }}
 		  {% else %}
-		    {{ post.content | truncatewords: site.theme.visiblewords }}
+		    {{  post.content | truncate: site.theme.visiblewords  }}
 		    <p>
 		    <a class="text" href="{{ post.url | prepend: site.baseurl }}">
 		      {{ site.theme.str_continue_reading }}
@@ -73,10 +68,4 @@ layout: default
 	    {% endif %}
 
 	</div>
-  <!-- Disqus -->
-  {% if site.theme.disqus_shortname %}
-  <div class="comments">
-    {% include disqus.html %}
-  </div>
-  {% endif %}
 </div>
