--- a/about.html
+++ b/about.html
@@ -1,8 +1,9 @@
 ---
 layout: page
 title: "About"
-description: "Hi there."
+description: "Hi there"
 ---
+<br>
 
 <!-- Language Selector -->
 <select onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
@@ -32,7 +33,6 @@ description: "Hi there."
 
 </div>
 
-
 <!-- English Version -->
 <div class="en post-container">
   <p>Hi, here is Towdium, a guy from Nanjing. I'm studing in <a href="http://www.xjtlu.edu.cn">Xi'an Jiaotong Liverpool University</a>, studing EEE, year 2.
@@ -52,7 +52,6 @@ description: "Hi there."
   <p>No intrest in food and travelling.</p>
 
   <p>Best regards,<br> winter 2016</p>
-
 </div>
 
 <!-- Handle Language Change -->
