--- a/about.html
+++ b/about.html
@@ -14,22 +14,17 @@ description: "Hi there"
 <!-- Chinese Version -->
 <div class="zh post-container">
 
-  <p>旧都流民一人，现于苏州<a href="http://www.xjtlu.edu.cn">西交利物浦大学</a>读大二，电气狗一只，喜欢玩儿挖金子的游戏。</p>
+  <p>旧都流民一人，现于利物浦读电气 Beng</p>
 
-  <p>下边把技能点列一下吧：</p>
+  <p>以前觉得命令行用电脑的都是大佬，现在我90%的工作都是在文本编辑器或者命令行里边完成的。<br>
+  以前觉得 ubuntu 这种东西根本就不是给人用的，然而我现在一个月都碰不到一次 Windows。<br>
+  以前觉得会编程的都是大佬，现在我可以10种语言 Hello World。</p>
 
-  <ul>
-    <li>2009年左右接触PS，Audition，日常操作都没啥问题。</li>
-    <li>2014年接触Java，现能做简单的桌面程序。</li>
-    <li>2014年接触AE，Premiere，剪个视频，套套模版，做做模版没啥问题。</li>
-    <li>2015年接触Python，做了一个简单的方程组计算器（当然是没有用Numpy的）。</li>
-    <li>2015年接触C，也就是普通水平吧。</li>
-    <li>各种专业课勉强不挂，就不说出来献丑了。</li>
-  </ul>
+  <p>然而实际上什么都没有变，在你变成了曾经眼中的大佬之后，只会发现这实际上并没有什么难度，然后脑子里又出现了新的大佬的影子。对我而言，最大的困难莫过于时间太少，想做的事太多。这么久走下来，倒也不是因为自己在原地踏步，只是和无穷远比起来，1和100并没有区别</p>。
 
-  <p>不爱美食，不爱旅游，以上。</p>
+  <p>不过就算是这样，如果能一直往前走的话，也就没什么好抱怨了</p>
 
-  <p>2016年冬</p>
+  <p>2017年春</p>
 
 </div>
 
