--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ description: "Hi there"
   以前觉得 ubuntu 这种东西根本就不是给人用的，然而我现在一个月都碰不到一次 Windows。<br>
   以前觉得会编程的都是大佬，现在我可以10种语言 Hello World。</p>
 
-  <p>然而实际上什么都没有变，在你变成了曾经眼中的大佬之后，只会发现这实际上并没有什么难度，然后脑子里又出现了新的大佬的影子。对我而言，最大的困难莫过于时间太少，想做的事太多。这么久走下来，倒也不是因为自己在原地踏步，只是和无穷远比起来，1和100并没有区别</p>。
+  <p>然而实际上什么都没有变，在你变成了曾经眼中的大佬之后，只会发现这实际上并没有什么难度，然后脑子里又出现了新的大佬的影子。对我而言，最大的困难莫过于时间太少，想做的事太多。这么久走下来，倒也不是因为自己在原地踏步，只是和无穷远比起来，1和100并没有区别。</p>
 
   <p>不过就算是这样，如果能一直往前走的话，也就没什么好抱怨了</p>
 
